--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,7 @@
         "angular": "~1.3.0"
     },
     "description": "A simple confirmation plugin for angular",
-    "main": [
-        "angularConfirmMe.js",
-        "confirmMe.css",
-    ],
+    "main": "./angularConfirmMe.js",
     "keywords": [
         "confirm",
         "angular",
